# AgencyManager

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  MEETING_FLOW_IMPLEMENTATION_PLAN.md  PRESENTATION_NOTES.md  QUALITY_REVIEW_ITEMS.md  agentic_design.md  corrected copy.rtf  delivery_plan.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  quality_testing.txt  ÖZELLİKLER.md
Insurance Agency Manager UI/: README.md  package-lock.json
Insurance Agency Manager UI/src/app/: routes.ts
backend/: README.md
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  daily_plan_fallback.py  daily_plan_orchestrator.py  meeting_prep_fallback.py  meeting_prep_orchestrator.py  post_meeting_fallback.py  post_meeting_orchestrator.py
backend/app/api/: dependencies.py  router.py
backend/app/core/: __init__.py  config.py
backend/app/data/: __init__.py  agencymanager.db  mock_data.py  mock_data_eng.py  runtime_store.json
backend/app/db/: __init__.py  admin.py  bootstrap.py  schema.py  seed.py  sqlite.py
backend/app/repositories/: __init__.py  contracts.py  sqlite_gateway.py
backend/app/schemas/: __init__.py  agency.py  agent_api.py  agent_outputs.py  auth.py  contracts.py  health.py  meeting_flow.py  persistence.py  planning.py  workflows.py
backend/app/services/: __init__.py  agent_runtime.py  agent_trace.py  ai_settings.py  contact_closure.py  (+2 more)
backend/tests/: test_phase10.py  test_phase12.py  test_phase13.py
src/: main.tsx
src/app/: routes.ts
src/imports/: agency-portfolio-assistant.md
src/styles/: index.css  theme.css
(+73 files in other folders)
